--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.14.0",
+    "classnames": "^2.3.2",
+    "dayjs": "^1.11.10",
+    "jwt-decode": "^3.1.2",
+    "npm": "^10.2.1",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-lottie": "^1.2.3",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.15.0",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "redux": "^4.2.1",
