--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "deploy-script": "npm run build && scp -r ./build/* nzvstniy@158.160.133.202:~/stellar-front"
   },
   "eslintConfig": {
     "extends": [
